divide and rename LandParcelGroup into CultivableLandParcel.

--- a/app/views/backend/land_parcel_clusters/index.html.haml
+++ b/app/views/backend/land_parcel_clusters/index.html.haml
@@ -3,7 +3,7 @@
 
 =main_toolbar do |t|
   -t.new
-  -# t.merge, {}, :remote=>true, :method=>:post, "data-confirm" => tl(:are_you_sure), "data-with"=>"td.plot.selected input", "data-redirect"=>true, "data-type"=>"text"
+  -# t.merge, {}, :remote=>Ntrue, :method=>:post, "data-confirm" => tl(:are_you_sure), "data-with"=>"td.plot.selected input", "data-redirect"=>true, "data-type"=>"text"
 
 =beehive do |b|
   -b.tabbox do
