--- a/app/views/backend/legal_entities/_form.html.haml
+++ b/app/views/backend/legal_entities/_form.html.haml
@@ -1,2 +1,50 @@
-=field_set do
-  =f.input :name
+=field_set(:major => true) do
+  =f.input :nature
+  =f.input :language, :collection => languages, :field => :select
+  =f.input :last_name
+  =f.input :first_name
+  =f.input :active, :hide => :dead_on
+  -# =f.input :number
+  =f.input :prospect
+  =f.input :client, :show => :client_informations
+  =f.input :supplier, :show => :supplier_informations
+  =f.input :attorney, :show => :attorney_informations
+  =f.input :transporter
+
+=field_set(:details) do # , :collapsed => true
+  =f.input :country, :collection => countries
+  =f.input :siren
+  =f.input :activity_code
+  =f.input :vat_number
+  =f.input :born_on
+  =f.input :dead_on
+  =f.input :picture
+  -# =f.input :ean13
+  =f.custom_fields
+
+=field_set(:client_informations) do
+  =f.referenced_association :sale_price_listing
+  =f.input :origin, :autocomplete => true
+  =f.input :first_met_on
+  =f.referenced_association :proposer
+  =f.referenced_association :responsible, :source => :employees
+  =f.input :vat_subjected
+  =f.input :reminder_submissive, :show => :reduction_percentage
+  =f.input :reduction_percentage
+  =f.input :authorized_payments_count
+  =f.input :deliveries_conditions, :field => :text
+  =f.referenced_association :client_account, :source => :client_thirds, :buttons => {:new => {:number => Account.find_in_chart(:client_thirds).number}}
+
+=field_set(:supplier_informations) do
+  =f.referenced_association :supplier_account, :source => :supplier_thirds, :buttons => {:new => {:number => Account.find_in_chart(:supplier_thirds).number}}
+
+=field_set(:attorney_informations, :after => :client_informations) do
+  =f.referenced_association :attorney_account, :source => :attorney_thirds, :buttons => {:new => {:number => Account.find_in_chart(:attorney_thirds).number}}
+
+=field_set(:coordinates, :major => true) do
+  =f.nested_association(:emails)
+  =f.nested_association(:mails)
+  =f.nested_association(:phones)
+  =f.nested_association(:mobiles)
+  =f.nested_association(:faxes)
+  =f.nested_association(:websites)
