--- a/app/views/backend/land_parcel_clusters/_form.html.haml
+++ b/app/views/backend/land_parcel_clusters/_form.html.haml
@@ -1,6 +1,11 @@
-=field_set do
+=field_set(:major => true) do
   =f.referenced_association :variant, :source => :land_parcel_clusters
   =f.input :name
   =f.input :work_number
   =f.input :description, :field => :text
-  -# input :shape
+  =f.input :born_at
+
+=field_set(:details) do
+  =f.input :active
+  =f.input :external
+  =f.referenced_association :owner
