--- a/app/views/backend/helps/_search.html.haml
+++ b/app/views/backend/helps/_search.html.haml
@@ -4,7 +4,7 @@
 -#cache(:controller=>:help, :action=>:show, :locale=>::I18n.locale, :id=>article.split(/[^a-z0-9\-]/)[-2]) do
 -# raise @article.inspect
 -# raise article.inspect
--cache(article) do
+-cache("#{I18n.locale}-#{article}") do
   .header
     .main-toolbar
       .btn-group.btn-group-help
