add "=product_form_frame do"  to product's views

--- a/app/views/backend/animals/_form.html.haml
+++ b/app/views/backend/animals/_form.html.haml
@@ -1,26 +1,20 @@
-=field_set do # partie info general de l entité animal
-  =f.referenced_association :variant, :source => :animals
-  =f.input :variety
-  =f.input :name # affiche le champ name de l entité animal avec une infos derriere
-  =f.input :sex, :as => :radio_buttons # affiche le champ sexe sous forme de radio avec une collection de proposition (M ou F) de l'entité animal
-  =f.custom_fields
-
-=field_set(:animal_identification) do # partie entrée sortie de l entité animal
-  =f.input :work_number
-  =f.input :identification_number
-  =f.input :born_at, :as => :date
-  =f.input :external
-  =f.referenced_association :owner, :selected => Entity.of_company
-
-=field_set(:genealogy) do # partie entrée sortie de l entité animal
-  =f.referenced_association :mother, :source => :mothers
-  =f.referenced_association :father, :source => :fathers
-
-=field_set(:document) do
-  =f.input :picture
-  =image_tag(@animal.picture.url(:thumb))
-  =f.input :description # affiche le champ description formaté en zone de texte
-
--if @animal.new_record?
-  =field_set(:indicator) do
-    =f.nested_association(:indicator_data)
+=product_form_frame do
+  =field_set do # partie info general de l entité animal
+    =f.input :name # affiche le champ name de l entité animal avec une infos derriere
+    =f.input :sex, :as => :radio_buttons # affiche le champ sexe sous forme de radio avec une collection de proposition (M ou F) de l'entité animal
+  
+  =field_set(:animal_identification) do # partie entrée sortie de l entité animal
+    =f.input :work_number
+    =f.input :identification_number
+    =f.input :born_at, :as => :date
+    =f.input :external
+    =f.referenced_association :owner, :selected => Entity.of_company
+  
+  =field_set(:genealogy) do # partie entrée sortie de l entité animal
+    =f.referenced_association :mother, :source => :mothers
+    =f.referenced_association :father, :source => :fathers
+  
+  =field_set(:document) do
+    =f.input :picture
+    =image_tag(@animal.picture.url(:thumb))
+    =f.input :description # affiche le champ description formaté en zone de texte
