--- a/app/views/backend/cultivable_land_parcels/_form.html.haml
+++ b/app/views/backend/cultivable_land_parcels/_form.html.haml
@@ -1,5 +1,5 @@
-=field_set do
-  =f.referenced_association :variant, :source => :cultivable_land_parcels
-  =f.input :name
-  =f.input :work_number
-  =f.input :description, :field => :text
+=product_form_frame do
+  =field_set do
+    =f.input :name
+    =f.input :work_number
+    =f.input :description, :field => :text
