--- a/app/views/backend/animal_medicines/_form.html.haml
+++ b/app/views/backend/animal_medicines/_form.html.haml
@@ -1,17 +1,15 @@
-=field_set do # partie info general de l entité animal
-  =f.referenced_association :variant, :source => :animal_medicines
-  =f.input :variety
-  =f.input :name # affiche le champ name de l entité animal avec une infos derriere
-  =f.custom_fields
-
-=field_set(:identification) do # partie entrée sortie de l entité animal
-  =f.input :work_number
-  =f.input :identification_number
-  =f.input :description # affiche le champ description formaté en zone de texte
-  =f.input :born_at, :as => :date
-  =f.input :external
-  =f.referenced_association :owner, :selected => Entity.of_company
-
-=field_set(:document) do
-  =f.input :picture
-  =image_tag(@animal_medicine.picture.url(:thumb))
+=product_form_frame do
+  =field_set do # partie info general de l entité animal
+    =f.input :name # affiche le champ name de l entité animal avec une infos derriere
+  
+  =field_set(:identification) do # partie entrée sortie de l entité animal
+    =f.input :work_number
+    =f.input :identification_number
+    =f.input :description # affiche le champ description formaté en zone de texte
+    =f.input :born_at, :as => :date
+    =f.input :external
+    =f.referenced_association :owner, :selected => Entity.of_company
+  
+  =field_set(:document) do
+    =f.input :picture
+    =image_tag(@animal_medicine.picture.url(:thumb))
