--- a/app/views/backend/building_divisions/_form.html.haml
+++ b/app/views/backend/building_divisions/_form.html.haml
@@ -1,15 +1,14 @@
-=field_set do
-  =f.input :name
-  =f.input :work_number
-  =f.input :born_at
-  =f.input :identification_number
-  =f.referenced_association :variant, :source => :buildings
-  =f.input :variety
-  =f.input :description, :field => :text
-  -# TODO  Translate :external inline-help with I18n
-  =f.input :external, inline_label: "Cas des zones ou pieces utiles mais non présentes sur l'exploitation"
-  =f.referenced_association :owner
-  
-=field_set(:document) do
-  =f.input :picture
-  =image_tag(@building_division.picture.url(:thumb))
+=product_form_frame do
+  =field_set do
+    =f.input :name
+    =f.input :work_number
+    =f.input :born_at
+    =f.input :identification_number
+    =f.input :description, :field => :text
+    -# TODO  Translate :external inline-help with I18n
+    =f.input :external, inline_label: "Cas des zones ou pieces utiles mais non présentes sur l'exploitation"
+    =f.referenced_association :owner
+    
+  =field_set(:document) do
+    =f.input :picture
+    =image_tag(@building_division.picture.url(:thumb))
