--- a/app/views/backend/animal_groups/_form.html.haml
+++ b/app/views/backend/animal_groups/_form.html.haml
@@ -1,4 +1,4 @@
-=product_form_frame do
+=f.product_form_frame do
   =field_set do # partie info general de l entité animal_group
     =f.input :name # affiche le champ name de l entité animal avec une infos derriere
     =f.input :sex, as: :radio_buttons# affiche le champ sexe sous forme de radio avec une collection de proposition (M ou F) de l entité animal
