--- a/app/views/backend/equipments/_form.html.haml
+++ b/app/views/backend/equipments/_form.html.haml
@@ -1,4 +1,4 @@
-=product_form_frame do
+=f.product_form_frame do
   =field_set do # partie info general de l entité animal
     =f.input :name # affiche le champ name de l entité animal avec une infos derriere
     =f.input :active, :hide => :dead_at
