--- a/app/views/backend/equipments/_form.html.haml
+++ b/app/views/backend/equipments/_form.html.haml
@@ -1,19 +1,9 @@
 =f.product_form_frame do
-  =field_set do # partie info general de l entité animal
-    =f.input :name # affiche le champ name de l entité animal avec une infos derriere
-    =f.input :active, :hide => :dead_at
-    =f.input :external, :show => :entity
-    =f.input :reservoir#, :show => :reservoir
-    =f.input :description, :field => :text # affiche le champ description
-    =f.input :picture, :multiple => true
-    =image_tag(@equipment.picture.url(:thumb)) if @equipment.picture.file?
-
-  =field_set(:delay) do # partie info general de l entité animal
-    =f.input :born_at
-    =f.input :dead_at
-
-  =field_set(:entity) do
-    =f.referenced_association :owner
+  =field_set :identification do
+    =f.input :name
+    =f.input :reservoir #, :show => :reservoir
+    =f.picture
+    =f.input :description
 
   -#=field_set(:reservoir) do
     =f.referenced_association :content_nature,:source => :stockables
