--- a/app/views/backend/incoming_deliveries/_form.html.haml
+++ b/app/views/backend/incoming_deliveries/_form.html.haml
@@ -9,8 +9,8 @@
 .add
   -id = rand(1_000_000).to_s(36)
   %span=:add_item.tl
-  %span.input-append=text_field_tag(:nature_id, nil, 'data-selector' => url_for(:controller => :product_natures, :action => :unroll), 'data-selector-new-item' => url_for(:action => :new, :controller => :product_natures), 'data-value-field' => "##{id}")
-  =hidden_field_tag(:nature_id, nil, :id => id)
+  %span.input-append=text_field_tag(:variant_id, nil, 'data-selector' => url_for(:controller => :product_nature_variants, :action => :unroll), 'data-selector-new-item' => url_for(:action => :new, :controller => :product_nature_variants), 'data-value-field' => "##{id}")
+  =hidden_field_tag(:variant_id, nil, :id => id)
   =link_to(:add.tl, {:action => :new, :controller => :incoming_delivery_items}, :class => "btn", :remote => true, 'data-update' => '#items', 'data-update-at' => 'bottom', 'data-with' => "##{id}")
 
   :ruby
