--- a/app/views/backend/products/_form.html.haml
+++ b/app/views/backend/products/_form.html.haml
@@ -1,10 +1,1 @@
-=f.product_form_frame do
-  =field_set do
-    =f.input :name
-    =f.input :born_at
-    =f.input :work_number
-    =f.input :number
-    =f.input :description
-    =f.input :external
-    =f.input :picture
-    =image_tag(@product.picture.url(:thumb))
+=f.product_form_frame
