Restore people/group button text changing css class

--- a/app/themes/tekyla/stylesheets/buttons.css.scss
+++ b/app/themes/tekyla/stylesheets/buttons.css.scss
@@ -109,7 +109,7 @@ a.btn, button {
   }
 
   // Adds synonyms
-  @each $renaming in (abort trash) (cancel undo) (destroy remove) (down chevron-down) (new plus) (merge resize-small) (divide resize-full) (duplicate copy) (load refresh) (statistics bar-chart) (index print) (unvalidateds ok) (close lock) {
+  @each $renaming in (abort trash) (cancel undo) (destroy remove) (down chevron-down) (new plus) (merge resize-small) (divide resize-full) (duplicate copy) (load refresh) (statistics bar-chart) (index print) (unvalidateds ok) (close lock) (people group) {
     &.btn-#{nth($renaming, 1)} {
       .icon, i {
         @include use-icon(nth($renaming, 2));
