--- a/app/views/backend/incoming_deliveries/_form.html.haml
+++ b/app/views/backend/incoming_deliveries/_form.html.haml
@@ -4,7 +4,7 @@
   =f.referenced_association :sender, :source => :suppliers
   =f.referenced_association :address, :source => :own_mails
   =f.referenced_association :mode
-  =f.input :planned_at
+  =f.input :sent_at
 
 .add
   -id = rand(1_000_000).to_s(36)
