--- a/app/views/backend/product_natures/_form.html.haml
+++ b/app/views/backend/product_natures/_form.html.haml
@@ -1,11 +1,14 @@
 =field_set do
   =f.input :name
+  =f.input :nomen, :disabled => true
   =f.input :number
   =f.input :active
   =f.input :variety
 
 =field_set :nature do
-  =f.referenced_association :category
+  =f.input :abilities, :disabled => true
+  =f.input :indicators, :disabled => true
+  -#=f.referenced_association :category
   -#input :nature, :show => {:subscription => :subscription}
 
 =field_set :nature do
@@ -14,7 +17,7 @@
   =f.input :saleable, :show => :product_account
   =f.input :purchasable, :show => :charge_account
   -#=f.input :producible
-  =f.input :individual
+  =f.input :population_counting
   -#=f.input :alive
   -#=f.input :deliverable # , :show => :stock_options
   =f.input :storable, :show => :stock_account #, :show => :stocks, :in => :stock_options
