--- a/app/views/backend/plant_medicines/_form.html.haml
+++ b/app/views/backend/plant_medicines/_form.html.haml
@@ -1,8 +1,1 @@
-=f.product_form_frame do
-  =field_set(:identification) do
-    =f.input :name
-    =f.input :work_number
-    =f.input :identification_number
-    =f.input :born_at
-    =f.picture
-    =f.input :description
+=f.product_form_frame
