--- a/app/views/backend/shared/_product_form.html.haml
+++ b/app/views/backend/shared/_product_form.html.haml
@@ -1,7 +1,7 @@
 =field_set(:identification) do
   =f.input :name
   =f.input :born_at
-  =f.input :dead_at
-  =f.input :work_number
+  -#=f.input :dead_at unless f.object.new_record?
+  -#=f.input :work_number
   =f.picture
   =f.input :description
