--- a/app/views/backend/animals/index.html.haml
+++ b/app/views/backend/animals/index.html.haml
@@ -2,5 +2,6 @@
 =main_toolbar do |t|
   -t.export do |e|
     -e.animal_list Time.now.to_s, @animals
+    -e.animal_sanitary_list Time.now.to_s, @animal_sanitary_list
   -t.new
 =list
