--- a/app/views/backend/accounts/load.html.haml
+++ b/app/views/backend/accounts/load.html.haml
@@ -1,12 +1,12 @@
 =form_tag({}, :class=>"flex") do
   =field_set do
-    =field(tl(:accounts_to_load), select_tag("chart", options_for_select(Account.charts.collect{|c| [Account.human_chart_name(c), c]}.sort)))
+    =field(tl(:accounts_to_load), select_tag("chart", options_for_select(Account.charts.collect{|c| [Account.chart_name(c), c]}.sort)))
 
-    -#for setting in [:unset_reconcilable_old_third_accounts, :set_reconcilable_new_but_existing_third_accounts]
+    -# for setting in [:unset_reconcilable_old_third_accounts, :set_reconcilable_new_but_existing_third_accounts]
       =field tl(setting), check_box_tag(setting, "1", params[setting])
 
-    -preferences = Preference.where("name LIKE ?", "%_accounts").order("name")
-    -#if preferences.count > 0
+    -# preferences = Preference.where("name LIKE ?", "%_accounts").order("name")
+    -# if preferences.count > 0
       -for preference in
         =field t("preferences."+preference.name), {:datatype=>preference.nature.to_sym, :model=>preference.model, :value=>preference.value, :name=>"preference[#{preference.name}][value]"}
   =form_actions do
