--- a/app/views/backend/entities/_form.html.haml
+++ b/app/views/backend/entities/_form.html.haml
@@ -33,13 +33,13 @@
   =f.input :reduction_percentage
   =f.input :authorized_payments_count
   =f.input :deliveries_conditions, :field => :text
-  =f.referenced_association :client_account, :source => :client_thirds, :buttons => {:new => {:number => Account.find_in_chart(:client_thirds).number}}
+  =f.referenced_association :client_account, :source => :clients, :buttons => {:new => {:number => Account.find_or_create_in_chart(:clients).number}}
 
 =field_set(:supplier_informations) do
-  =f.referenced_association :supplier_account, :source => :supplier_thirds, :buttons => {:new => {:number => Account.find_in_chart(:supplier_thirds).number}}
+  =f.referenced_association :supplier_account, :source => :suppliers, :buttons => {:new => {:number => Account.find_or_create_in_chart(:suppliers).number}}
 
 =field_set(:attorney_informations, :after => :client_informations) do
-  =f.referenced_association :attorney_account, :source => :attorney_thirds, :buttons => {:new => {:number => Account.find_in_chart(:attorney_thirds).number}}
+  =f.referenced_association :attorney_account, :source => :attorneys, :buttons => {:new => {:number => Account.find_or_create_in_chart(:attorneys).number}}
 
 =field_set(:coordinates, :major => true) do
   =f.nested_association(:emails)
