Cleans procedures and nomenclatures

--- a/app/views/backend/aggregators/show.html.haml
+++ b/app/views/backend/aggregators/show.html.haml
@@ -1,5 +1,4 @@
-=kujaku do |k|
-  -for parameter in @aggregator.parameters
-    -if parameter.nature == :list
+-#=kujaku do |k|
+  -#for p in @aggregator.parameters
 
 .aggregator=@aggregator.to_html
