begin to clean View with new model

--- a/app/views/backend/product_nature_variants/_form.html.haml
+++ b/app/views/backend/product_nature_variants/_form.html.haml
@@ -7,10 +7,4 @@
   =f.input :contour
   =f.input :horizontal_rotation
 
-=field_set(:indicator) do
-  =f.input :purchase_indicator
-  =f.input :purchase_indicator_unit
-  =f.input :sale_indicator
-  =f.input :sale_indicator_unit
-  =f.input :usage_indicator
-  =f.input :usage_indicator_unit
+-#=field_set(:indicator) do
