update ProductNatureVariant view

--- a/app/views/backend/product_nature_variants/_form.html.haml
+++ b/app/views/backend/product_nature_variants/_form.html.haml
@@ -7,4 +7,5 @@
   =f.input :contour
   =f.input :horizontal_rotation
 
--#=field_set(:indicator) do
+=field_set(:indicator) do
+  =f.nested_association(:indicator_data)
