--- a/app/views/backend/product_natures/_variant_fields.html.haml
+++ b/app/views/backend/product_natures/_variant_fields.html.haml
@@ -1,10 +1,9 @@
 .nested-fields
   =link_to_remove_nested_association(:variant, f)
-  =f.input(:purchase_indicator, :wrapper_html => {:id => 'purchase_indicator-field'})
-  =f.input(:purchase_indicator_unit, :wrapper_html => {:id => 'purchase_indicator_unit-field'})
-  =f.input(:sale_indicator, :wrapper_html => {:id => 'sale_indicator-field'})
-  =f.input(:sale_indicator_unit, :wrapper_html => {:id => 'sale_indicator_unit-field'})
-  =f.input(:usage_indicator, :wrapper_html => {:id => 'usage_indicator-field'})
-  =f.input(:usage_indicator_unit, :wrapper_html => {:id => 'usage_indicator_unit-field'})
+  =f.input(:name, :wrapper_html => {:id => 'name-field'})
+  =f.input(:commercial_name, :wrapper_html => {:id => 'commercial_name-field'})
+  =f.input(:unit_name, :wrapper_html => {:id => 'unit_name-field'})
+  =f.input(:commercial_description, :wrapper_html => {:id => 'commercial_description-field'})
+  =f.picture
 
   
