--- a/app/views/backend/land_parcels/show.html.haml
+++ b/app/views/backend/land_parcels/show.html.haml
@@ -9,7 +9,7 @@
         =@land_parcel.shape_svg(:width => 180, :height => 180, :class => :map)
       .info
         %span.title=LandParcel.human_attribute_name(:area_measure)
-        %span.value=@land_parcel.shape_area.square_meter.convert(:hectare)
+        %span.value=@land_parcel.shape_area.in_square_meter.convert(:hectare)
 
 
     -b.cell do
