complete show view on productions (list and map)

--- a/app/views/backend/procedures/show.html.haml
+++ b/app/views/backend/procedures/show.html.haml
@@ -12,3 +12,8 @@
         -l.attribute :state
         -l.attribute :production, :url => true
 
+  -b.tabbox do
+    -b.cell(:variables) do
+      =list(:variables)
+    -b.cell(:operations) do
+      =list(:operations)
