--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -5,12 +5,20 @@
   -b.cell do
     =attributes_list(@production) do |l|
       -l.attribute :name
+      -l.attribute :product_nature
+      -l.attribute :started_at
       -l.attribute :state
       -l.attribute :campaign
       -l.attribute :activity
 
+  -b.cell :map do
+    %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => CultivableLandParcel.of_production(@production).shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
+      -CultivableLandParcel.of_production(@production).find_each do |cultivable_land_parcel|
+        %a{'xlink:href' => backend_cultivable_land_parcel_url(cultivable_land_parcel)}
+          %path{:d => cultivable_land_parcel.shape_as_svg, :title => cultivable_land_parcel.name}
+  
   -b.tabbox do
-    -b.cell(:supports) do
-      =list(:support)
     -b.cell(:procedures) do
       =list(:procedure)
+    -b.cell(:supports) do
+      =list(:support)
