update cultivable land parcels show view (in progress)

--- a/app/views/backend/cultivable_land_parcels/show.html.haml
+++ b/app/views/backend/cultivable_land_parcels/show.html.haml
@@ -10,7 +10,14 @@
         %span.title=CultivableLandParcel.human_attribute_name(:area_measure)
         %span.value=@cultivable_land_parcel.shape_area.in_square_meter.convert(:hectare)
 
-=beehive do |b|
-  -b.cell do
-    =attributes_list(@cultivable_land_parcel) do |l|
-      -l.attribute :name
+
+    -b.cell do
+      =attributes_list(@cultivable_land_parcel) do |l|
+        -l.attribute :name
+      
+  -b.tabbox do
+
+    -b.cell(:content_products) do
+      =list(:content_products)
+    -b.cell(:productions) do
+      =list(:productions)
