--- a/app/views/backend/aggregators/show.html.haml
+++ b/app/views/backend/aggregators/show.html.haml
@@ -1,5 +1,7 @@
--# = kujaku do |k|
-  -# for p in @aggregator.parameters
+= kujaku do |k|
+  - for parameter in @aggregator.class.parameters
+    = render "parameter", :parameter => parameter, :k => k
+
 = main_toolbar do |t|
   - t.export do |e|
     - e.send(@aggregator.class.aggregator_name, @aggregator.key, @aggregator)
